# grokbuild-tools

./: .gitignore  GrokAccountManager.spec  LICENSE  README.md  pyproject.toml  requirements.txt  start.vbs  启动.bat
docs/superpowers/plans/: 2026-07-14-grok-account-manager.md
docs/superpowers/specs/: 2026-07-14-grok-account-manager-design.md
installer/: GrokAccountManager.iss
scripts/: build_windows.ps1
src/grok_account_manager/: __init__.py  app.py  auth_bridge.py  browser_util.py  login_flow.py  models.py  paths.py  process.py  quota.py  store.py  updater.py  usage.py
tests/: test_auth_bridge.py  test_browser_util.py  test_detect_current.py  test_fmt_time.py  test_login_flow.py  test_models.py  test_process.py  test_quota.py  test_store.py  test_updater.py  test_usage.py
