[project]
name = "grok-account-manager"
version = "0.2.0"
description = "Multi-account manager for Grok Build: capture, quota, token stats, one-click switch"
requires-python = ">=3.11"
dependencies = [
  "customtkinter>=5.2.0",
  "psutil>=5.9.0",
]

[project.scripts]
grok-account-manager = "grok_account_manager.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
